<resources>
    <string name="app_name">Haraka Driver</string>
    <string name="continue_text">Continue</string>
    <string name="register_text">Register Driver</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_exit">Sign out</string>
    <string name="title_activity_maps">Map</string>
    <string name="sign_in_with_phone">Sign In with Phone</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="decline">Decline</string>
    <string name="permission_require">Permission require</string>
    <string name="decline_failed">Decline Failed</string>
    <string name="decline_success">You have decline this request</string>
    <string name="token_not_found">Token not found</string>
    <string name="start_uber">START</string>
    <string name="rider_not_found">Rider not found with key</string>
    <string name="accept_failed">Accept failed</string>
    <string name="id_number">Id Number</string>
    <string name="drive_license">Drive License</string>
    <string name="motor_type">Motorcycle Type</string>
    <string name="vehicle_license_number">Vehicle License Number</string>
    <string name="done_request_failed">Request done failed</string>
    <string name="done_success">Your trip has been done!</string>
    <string name="address">Address</string>
    <string name="agama">Religion</string>
    <string name="status">Status</string>
    <string name="asal">From</string>
    <string name="jenis_kelamin">Gender</string>

    <string name="chat">Chat</string>
    <string name="penghasilan">Penghasilan saya</string>
    <string name="penilaian">Lihat penilaian pelanggan</string>
    <string name="undang">Undang teman</string>
    <string name="bantuan">Pusat bantuan</string>
    <string name="kebijakan">Kebijakan dan privasi</string>
    <string name="complete_failed">Complete trip failed</string>
    <string name="complete_trip">Your trip has been done</string>
</resources>