<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MapsActivity" />

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_info_bojek"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_margin="20dp"
        android:background="@color/lightGray"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <TextView
                android:fontFamily="@font/open_sans_light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/space"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="Selamat Datang, Mitra Driver GoPos"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:id="@+id/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:fontFamily="@font/open_sans_light"
                android:id="@+id/txt_phone"
                android:layout_width="wrap_content"
                android:textColor="@color/space"
                android:layout_height="wrap_content"
                android:text="@string/nav_header_subtitle" />

            <TextView
                android:layout_marginTop="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:id="@+id/txt_motor_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/space"
                android:text="aerox" />
            <TextView
                android:fontFamily="@font/open_sans_bold"
                android:id="@+id/txt_vehicle_number"
                android:layout_width="wrap_content"
                android:textColor="@color/space"
                android:layout_height="wrap_content"
                android:text="B 1234 WOK" />
        </LinearLayout>



    </androidx.cardview.widget.CardView>

    <com.google.android.material.chip.Chip
        android:theme="@style/Theme.MaterialComponents.Light"
        android:id="@+id/chip_decline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/decline"
        android:textColor="@color/lightGray"
        android:visibility="gone"
        app:chipBackgroundColor="@color/blackpos"
        app:chipIcon="@drawable/ic_baseline_clear_24"
        app:chipIconTint="@color/lightGray"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/layout_accept"
        android:layout_gravity="bottom"
        android:layout_margin="24dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        android:visibility="gone">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/type_order"
                android:layout_gravity="center_horizontal"
                android:text="Tipe Order"
                android:layout_marginRight="2dp"
                android:textColor="@color/Black"
                android:textSize="20dp"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/open_sans_bold"
                android:textAlignment="center"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_estimate_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="0.4 km"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_type_uber"
                    android:fontFamily="@font/open_sans_light"
                    android:textColor="@color/lightGray"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="8dp"
                    android:textSize="18dp"
                    android:visibility="gone"
                    android:text="Driver"/>
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center">
                    <com.mikhaellopez.circularprogressbar.CircularProgressBar
                        android:id="@+id/circularProgressBar"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        app:cpb_background_progressbar_color="@color/colorPrimary"
                        app:cpb_background_progressbar_width="3dp"
                        app:cpb_progress="0"
                        app:cpb_progress_direction="to_right"
                        app:cpb_progressbar_width="3dp"
                        android:layout_gravity="center_horizontal"
                        app:cpb_progressbar_color="@color/progress_bar_color"
                        app:cpb_round_border="false"/>
                    <ImageView
                        android:id="@+id/img_round"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center_horizontal"
                        android:clickable="false"
                        app:tint="@color/colorPrimary"
                        android:src="@drawable/ic_baseline_person_24"/>

                </RelativeLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_estimate_time"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:text="2 Min"
                    android:textAlignment="center"
                    android:textColor="@color/Black"
                    android:textSize="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_rating"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:visibility="gone"
                    android:text="4.24"
                    android:textColor="@color/lightGray"
                    android:textSize="18dp"
                    android:drawableRight="@drawable/ic_baseline_star_24"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/txt_estimate_price"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/open_sans_light"
                android:layout_marginTop="4dp"
                android:text="2 Min"
                android:layout_marginLeft="6dp"
                android:textAlignment="center"
                android:textColor="@color/Black"
                android:textSize="16dp"
                />





        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/layout_start_uber"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="8dp"
        app:cardCornerRadius="8dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/img_start_uber"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_baseline_account_circle_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_start_uber_estimate_time"
                    android:text="1 min"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/space"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/img_start_uber"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_start_uber_estimate_distance"
                    android:text="9 km"
                    android:fontFamily="@font/open_sans_bold"
                    android:textColor="@color/space"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/img_start_uber"/>
            </RelativeLayout>
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="estimasi harga"
                android:layout_gravity="center"
                android:fontFamily="@font/open_sans_light"
                android:textColor="@color/space"
                android:textSize="16dp"
                android:id="@+id/txt_start_uber_estimate_price"/>
            <View
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dark_gray"/>

            <LinearLayout
                android:id="@+id/layout_notify_rider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">
                <TextView
                    android:id="@+id/txt_notify_rider"
                    android:text="05:00"
                    android:textSize="18sp"
                    android:gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_bold"/>
                <ProgressBar
                    android:id="@+id/progress_notify"
                    android:min="0"
                    android:max="300"
                    android:indeterminate="false"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_rider_name"
                    android:text="Deen Snuts"
                    android:textColor="@color/space"
                    android:textSize="22sp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/open_sans_bold"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:id="@+id/img_phone_call"
                    android:src="@drawable/ic_baseline_perm_phone_msg_24"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_rider_number"
                    android:text="0812577884"
                    android:textColor="@color/space"
                    android:textSize="16sp"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/open_sans_light"
                    />
            </RelativeLayout>

            <com.kusu.library.LoadingButton
                android:id="@+id/btn_call_driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="Call"
                android:textColor="@color/lightGray"
                app:lb_buttonColor="@color/colorPrimary"
                app:lb_isCircular="false" />
            <com.kusu.library.LoadingButton
                android:id="@+id/btn_start"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="Start"
                android:textColor="@color/lightGray"
                app:lb_buttonColor="@color/colorPrimary"
                app:lb_isCircular="false" />
            <com.kusu.library.LoadingButton
                android:id="@+id/btn_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:fontFamily="@font/open_sans_bold"
                android:text="Finish"
                android:textColor="@color/lightGray"
                app:lb_buttonColor="@color/startuber"
                app:lb_isCircular="false" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>